--- a/Presentation/Ecommerce.SOS.Gateway/Ecommerce.SOS.Gateway.csproj
+++ b/Presentation/Ecommerce.SOS.Gateway/Ecommerce.SOS.Gateway.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DockerComposeProjectPath>../../docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>1a17fe1a-696d-4964-a2fa-1c3a10d0e228</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
